syntax = "proto3";

package io.harness.gitsync;

import "google/protobuf/wrappers.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_detail.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_scope_info.proto";

option java_multiple_files = true;

service HarnessToGitPushInfoService {
  rpc pushFromHarness(PushInfo) returns (PushResponse);
  rpc getConnectorInfo(FileInfo) returns (InfoForPush);
  rpc isGitSyncEnabledForScope(io.harness.eventsframework.schemas.entity.EntityScopeInfo) returns (IsGitSyncEnabled);
  rpc getDefaultBranch(RepoDetails) returns (BranchDetails);
}

message PushInfo {
  string commit_id = 1;
  string file_path = 2;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO entity_detail = 3;
  string account_id = 4;
  string yaml_git_config_id = 5;
  bool is_new_branch = 6;
  string branch_name = 7;
  string folder_path = 8;
  map<string, string> context_map = 9;
  bool is_sync_from_git = 10;
}

message PushResponse {
  bool status = 1;
}

message FileInfo {
  string file_path = 1;
  string yaml_git_config_id = 2;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO entity_detail = 3;
  string account_id = 4;
  string branch = 5;
  string folder_path = 6;
  UserPrincipal user_principal = 7;
  map<string, string> context_map = 8;
}

message InfoForPush {
  google.protobuf.BytesValue connector = 1;
  google.protobuf.StringValue file_path = 2;
  // status 0 = failed, 1 = success
  bool status = 3;
  google.protobuf.BytesValue exception = 4;
  bool is_default = 5;
  string yaml_git_config_id = 6;
  string account_id = 7;
  google.protobuf.StringValue org_identifier = 8;
  google.protobuf.StringValue project_identifier = 9;
  string defaultBranchName = 10;
  google.protobuf.StringValue folder_path = 11;
  bool execute_on_delegate = 12;
  google.protobuf.BytesValue encrypted_data_details = 13;
}

message IsGitSyncEnabled {
  bool enabled = 1;
}

message UserPrincipal {
  google.protobuf.StringValue user_id = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue user_name = 3;
}

message RepoDetails {
  string yaml_git_config_id = 1;
  string account_id = 2;
  google.protobuf.StringValue org_identifier = 3;
  google.protobuf.StringValue project_identifier = 4;
  map<string, string> context_map = 5;
}

message BranchDetails {
  string default_branch = 1;
}
